--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Theme color for browser UI -->
     <meta name="theme-color" content="#1e1e1e">
 
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/index.html" />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danmills.dev/">
