--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,9 @@
     <meta name="description" content="About Dan Mills, a web developer and UI/UX designer with a background in education.">
     <meta name="author" content="Dan Mills">
     
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/pages/about.html" />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danmills.dev/pages/about.html">
