--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Dan Mills for web development projects, collaborations, or inquiries.">
     <meta name="author" content="Dan Mills">
+
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/pages/contact.html" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
