--- a/pages/project-dialogue-tool.html
+++ b/pages/project-dialogue-tool.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dialogue Generation Tool - Dan Mills Portfolio</title>
     <meta name="description" content="A detailed look at the Dialogue Generation Tool, an AI-powered application for creating multi-speaker audio.">
+    
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/pages/project-dialogue-tool.html" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
@@ -68,4 +71,3 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
-
