--- a/pages/project-pronunciation-tool.html
+++ b/pages/project-pronunciation-tool.html
@@ -6,6 +6,9 @@
     <title>Pronunciation Tool - Dan Mills Portfolio</title>
     <meta name="description" content="A detailed look at the Pronunciation Tool, an AI-powered utility for language learners.">
 
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/pages/project-pronunciation-tool.html" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
@@ -68,4 +71,3 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
-
