--- a/pages/project-stock-tool.html
+++ b/pages/project-stock-tool.html
@@ -6,6 +6,9 @@
     <title>Stock Tracker Tool - Dan Mills Portfolio</title>
     <meta name="description" content="A detailed look at the Stock Tracker Tool project, showcasing data visualization and user experience design.">
 
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/pages/project-stock-tool.html" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
