--- a/pages/project-matts-world.html
+++ b/pages/project-matts-world.html
@@ -6,6 +6,9 @@
     <title>Matt's World - Dan Mills Portfolio</title>
     <meta name="description" content="A detailed look at 'Matt's World,' a fun, interactive educational website for a young student.">
 
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/pages/project-matts-world.html" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
@@ -68,4 +71,3 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
-
