--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - Site Mills</title>
+
+    <!-- Canonical Tag for SEO -->
+    <link rel="canonical" href="https://danmills.dev/pages/thank-you.html" />
+
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
