add almanac and email assist

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -43,7 +43,50 @@
                 Here's a selection of projects that showcase my skills in web development, design, and user experience. From professional client sites to personal tools, each project reflects a commitment to quality and modern standards.
             </p>
             <div class="portfolio-grid">
-                <!-- Stock Tool Project -->
+                
+                <!-- NEW PROJECT 1: Almanac Utility Tool -->
+                <div class="portfolio-card fade-in">
+                    <!-- Note: Almanac thumbnail image asset will need to be created by the user (almanac-thumb.png) -->
+                    <img src="/assets/images/almanac-thumb.png" alt="Almanac Utility Tool project thumbnail." class="portfolio-image">
+                    <div class="card-content">
+                        <h3>Almanac Utility Tool</h3>
+                        <p>A dynamic web tool that provides a historical and celestial digest, displaying key events and information based on user-selected dates through API integration.</p>
+                        <div class="tech-stack">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>API Integration</span>
+                            <span>Gemini API</span>
+                        </div>
+                        <div class="button-group">
+                            <a href="https://almanac.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Site <i class="fas fa-external-link-alt"></i></a>
+                            <a href="/pages/project-almanac.html" class="secondary-button view-details">View Details</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- NEW PROJECT 2: Email Assist AI -->
+                <div class="portfolio-card fade-in">
+                    <!-- Note: Email Assist AI thumbnail image asset will need to be created by the user (email-assist-thumb.png) -->
+                    <img src="/assets/images/email-assist-thumb.png" alt="Email Assist AI project thumbnail." class="portfolio-image">
+                    <div class="card-content">
+                        <h3>Email Assist AI</h3>
+                        <p>An intelligent assistant that uses AI (Gemini) to analyze email content, extract structured data like order information, and generate suggested professional replies, streamlining business workflows.</p>
+                        <div class="tech-stack">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>Gemini API</span>
+                        </div>
+                        <div class="button-group">
+                            <a href="https://email-assist.danmills.dev" target="_blank" rel="noopener noreferrer" class="cta-button">View Site <i class="fas fa-external-link-alt"></i></a>
+                            <a href="/pages/project-email-assist.html" class="secondary-button view-details">View Details</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Stock Tool Project (Existing) -->
                 <div class="portfolio-card fade-in">
                     <img src="/assets/images/stocktoolthumb.png" alt="Stock Tracker Tool project thumbnail." class="portfolio-image">
                     <div class="card-content">
@@ -62,7 +105,7 @@
                     </div>
                 </div>
 
-                <!-- Teacher Dan Project -->
+                <!-- Teacher Dan Project (Existing) -->
                 <div class="portfolio-card fade-in">
                     <img src="/assets/images/tdanthumb.png" alt="Teacher Dan project thumbnail." class="portfolio-image">
                     <div class="card-content">
@@ -81,7 +124,7 @@
                     </div>
                 </div>
 
-                <!-- Matt's World Project -->
+                <!-- Matt's World Project (Existing) -->
                 <div class="portfolio-card fade-in">
                     <img src="/assets/images/mattsworld-thumb.png" alt="Matt's World project thumbnail." class="portfolio-image">
                     <div class="card-content">
@@ -99,7 +142,7 @@
                     </div>
                 </div>
                 
-                <!-- Dialogue Tool Project -->
+                <!-- Dialogue Tool Project (Existing) -->
                 <div class="portfolio-card fade-in">
                     <img src="/assets/images/dialogue-thumb.png" alt="Dialogue Generation Tool project thumbnail." class="portfolio-image">
                     <div class="card-content">
@@ -118,7 +161,7 @@
                     </div>
                 </div>
 
-                <!-- Pronunciation Tool Project -->
+                <!-- Pronunciation Tool Project (Existing) -->
                 <div class="portfolio-card fade-in">
                     <img src="/assets/images/pronunciation-thumb.png" alt="Pronunciation Tool project thumbnail." class="portfolio-image">
                     <div class="card-content">
@@ -147,4 +190,3 @@
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
-
